# proto

./: README.md
Detectron_scripts/Detectron_configs/: tlessArti09052018.yaml  tless_split.yaml
Detectron_scripts/bash/: singleTEST.sh
Detectron_scripts/blender_scripts/: createArtiDepthTEST.blend1  createDB  createGANrenderings.blend  createGANrenderings_V2.blend  generator02052018.py  generatorGAN_V2.py  generatorLINEMOD.py  generatorRealistic.py  generatorRealistic_wBG_proto.py  restartBlender.sh  testTless.blend  testTless.blend1  tlessTest.py
ROS_packages/v4r_Detectron/: CMakeLists.txt  package.xml
docker_stuff/detect_docker/: Dockerfile  Dockerfile.safe  startCont.sh
docker_stuff/pix2pix_docker/: Dockerfile  startCont.sh
pix2pix/: data_loader.py  pix2pix.py
python_scripts/: createAUGM_19072018.py  createAUG_GAN_19072018.py  createArti02052018.py  createArti04052018.py  createArti06062018.py  createArti09052018.py  createArti09062018.py  createArti18052018.py  createArti21052018.py  createArti24042018.py  createArti27042018.py  createArti28052018.py  createArtiTless.py  createGeneTest.py  createLINEMODbaseline.py  createLinemodTest.py  createREAL_GAN_19072018.py  createSYNTH_19072018.py  createTest09062018.py  createTestfromGAN.py  createTlessTest.py  createTlessTrain.py  createTlessTrain.py.safe  evalDetectron.py  evalDetectron_multiIns.py  evalDetectron_multiIns_nonredundant.py  evalLINEMOD.py  segment_normals.py  testing.py
python_scripts/CPP_workaround/: CMakeCache.txt  CMakeLists.txt  Makefile  cec.cpp  cmake_install.cmake
(+34 files in other folders)
